add application_tenant_db table
